--- a/assets/stylesheets/pages/_index.scss
+++ b/assets/stylesheets/pages/_index.scss
@@ -9,10 +9,13 @@
       background-color: green;
     }
   }
+  
   .about {
     width: 100%;
     height: 100vh;
     max-height: 480px;
+    padding: 0 5%;
+    margin-top: 50px;
     .title {
       @include flexBox(center, center);
       p {
@@ -20,6 +23,86 @@
         font-size: 26px;
         line-height: 31px;
         color: $secondary;
+      }
+    }
+    &_content {
+      @include flexBox(space-between, center);
+      margin-top: 40px;
+
+      img {
+        width: 50%;
+      }
+      .text {
+        width: 40%;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 24px;
+        color: $text-light;
+      }
+    }
+  }
+
+  .courses {
+    width: 100%;
+    max-height: 600px;
+    padding: 20px 0;
+
+    h2 {
+      font-weight: 600;
+      font-size: 26px;
+      line-height: 31px;
+      color: $text-color;
+      text-align: center;
+    }
+
+    .course-cards {
+      margin-left: 5%;
+
+      .hooper {
+        height: 500px !important;
+        padding-top: 50px;
+        overflow-y: visible;
+
+        .hooper-prev {
+          left: -60px;
+        }
+
+        .hooper-next {
+          right: -10px;
+        }
+      }
+    }
+  }
+
+  .mentors {
+    width: 100%;
+    max-height: 600px;
+    padding: 20px 0;
+
+    h2 {
+      font-weight: 600;
+      font-size: 26px;
+      line-height: 31px;
+      color: $text-color;
+      text-align: center;
+    }
+
+    .mentor-cards {
+      margin-left: 5%;
+
+      .hooper {
+        height: 500px !important;
+        padding-top: 50px;
+        overflow-y: visible;
+
+        .hooper-prev {
+          left: -60px;
+        }
+
+        .hooper-next {
+          right: -10px;
+        }
       }
     }
   }
