--- a/assets/stylesheets/base/_mixin.scss
+++ b/assets/stylesheets/base/_mixin.scss
@@ -5,14 +5,14 @@
 }
 
 @mixin button($bg, $color, $font) {
-  padding: 10px 10px;
+  padding: .5rem .5rem;
   background: $bg;
   box-shadow: 0px 4px 20px rgba(255, 178, 125, 0.4);
   border-radius: 8px;
   color: $color;
   font-weight: 600;
   font-size: $font;
-  line-height: 14px;
+  line-height: 130%;
   transition: .3s ease-in-out;
   border: none;
   cursor: pointer;
