--- a/assets/stylesheets/components/_header.scss
+++ b/assets/stylesheets/components/_header.scss
@@ -25,8 +25,8 @@ nav {
         position: relative;
         display: block;
         margin-bottom: 10px;
-        transition: .3s ease-in-out;
-
+        transition: 0.3s ease-in-out;
+        
         &:hover {
           color: $secondary;
 
@@ -39,6 +39,20 @@ nav {
             background-color: $secondary;
             box-shadow: 5px 4px 10px #0d2da2;
           }
+        }
+      }
+      .active {
+        transition: 0.3s ease-in-out;
+        color: $secondary;
+
+        &::after {
+          content: '';
+          position: absolute;
+          display: block;
+          width: 100%;
+          height: 1px;
+          background-color: $secondary;
+          box-shadow: 5px 4px 10px #0d2da2;
         }
       }
     }
@@ -67,6 +81,7 @@ nav {
         border: none;
         outline: none;
         cursor: pointer;
+        text-transform: uppercase;
       }
 
       .lang-content {
@@ -84,6 +99,8 @@ nav {
           display: block;
           border: none;
           outline: none;
+          cursor: pointer;
+          text-transform: uppercase;
 
           &:hover {
             background-color: #f1f1f1;
