--- a/assets/stylesheets/components/_mentor.scss
+++ b/assets/stylesheets/components/_mentor.scss
@@ -4,7 +4,6 @@
   background: $primary;
   box-shadow: 0px 4px 20px #b9bcbe, inset 2px 2px 20px #d6dbde;
   border-radius: 20px;
-  @include flexBox(space-evenly, center);
   flex-direction: column;
   text-align: center;
 
@@ -12,19 +11,22 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
+    margin-top: 30px;
   }
 
   p.name {
     font-weight: 600;
-    font-size: 26px;
-    line-height: 31px;
+    font-size: 20px;
+    line-height: 20px;
     color: $text-color;
+    margin-top: 10px;
   }
 
   p.job {
     font-weight: 400;
-    font-size: 26px;
-    line-height: 31px;
+    font-size: 20px;
+    line-height: 20px;
     color: $text-color;
+    margin-top: 20px;
   }
 }
