--- a/assets/stylesheets/pages/_index.scss
+++ b/assets/stylesheets/pages/_index.scss
@@ -6,10 +6,45 @@
     .slide {
       width: 100%;
       height: 100%;
-      background-color: green;
+      position: relative;
+      padding-left: 150px;
+      padding-top: 110px;
+
+      img {
+        // z-index: -1;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+      }
+
+      h2 {
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 47px;
+        color: $primary;
+        z-index: 2;
+      }
+
+      h1 {
+        width: 80%;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        font-weight: 700;
+        font-size: 70px;
+        line-height: 82px;
+        color: $primary;
+        z-index: 2;
+      }
+
+      button {
+        @include button($accent, $primary, 30px);
+      }
     }
   }
-  
+
   .about {
     width: 100%;
     height: 100vh;
@@ -67,10 +102,6 @@
         .hooper-prev {
           left: -60px;
         }
-
-        .hooper-next {
-          right: -10px;
-        }
       }
     }
   }
@@ -98,10 +129,6 @@
 
         .hooper-prev {
           left: -60px;
-        }
-
-        .hooper-next {
-          right: -10px;
         }
       }
     }
